# mpc3

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.devcontainer/: devcontainer.json
.github/: constants.env
.github/workflows/: ci.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
docker/: Dockerfile  build.sh  run.sh
fuzz_test/: CMakeLists.txt
include/mpc3/: net_bench_lib.hpp  sample_library.hpp
results/: plotter.py  receiver-1Gb.result  receiver-clam-10Mb-55ms.result  receiver-localhost-10Mb-55ms.result  sender-1Gb.result  sender-clam-12Mb-55ms.result  sender-localhost-10Mb-55ms.result
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/net_bench_app/: CMakeLists.txt  net_bench_app.cpp
src/net_bench_lib/: CMakeLists.txt  net_bench_lib.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/stan_bench/: CMakeLists.txt  stan_bench.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
